add admin db remove
